# hermes-web

./: .editorconfig  .gitignore  ACKNOWLEDGMENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PERFORMANCE.md  README.md  SECURITY.md  TROUBLESHOOTING.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
RELEASES/: v1.0.0.md
bridge/: server.py
bridge-rs/: Cargo.toml
bridge-rs/src/: main.rs
patches/: apply_speed.py  speed-gateway.patch
scripts/: get.sh  install.ps1  install.sh  start-dev.js
src/: App.tsx  index.css
src/components/hermes/: hermes-interactive-flow.tsx  hermes-message.tsx  hermes-prompt-composer.tsx  hermes-sidebar.tsx  hermes-slash-menu.tsx  hermes-tool-activity.tsx  hermes-web-app.tsx  hermes-web.tsx
src/components/prompt-kit/: chain-of-thought.tsx  hermes-loader.tsx  hermes-prompt-suggestion.tsx  hermes-reasoning.tsx  hermes-thinking-bar.tsx  index.ts  markdown.tsx  prompt-input.tsx  thinking-bar.tsx  tool.tsx
src/lib/: ansi-to-react.tsx  gateway-client.ts  gateway-types.ts  use-gateway.ts
