[package]
name = "hermes-bridge"
version = "0.1.0"
edition = "2021"
description = "High-performance WebSocket bridge for Hermes Agent TUI gateway"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde_json = "1"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
